feat: support indexing up to six facial images per report